--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a class="inline-block py-2 px-4 text-white font-bold no-underline" href="#">Home</a>
               </li>
               <li class="mr-3">
-                <a class="inline-block text-white no-underline hover:text-gray-800 hover:text-underline py-2 px-4"
+                <a id="products" class="inline-block text-white no-underline hover:text-gray-800 hover:text-underline py-2 px-4"
                   href="#products">Products</a>
               </li>
               <li class="mr-3">
